_ya-tr-span data-index=_1-0_ data-translated=_true_ data-source-lang=_en_ data-target-lang=_ru_ data-value=_main_output (1).txt
  File "main.py", line 2
    1. Страница с адресом "/news/", на которой будет выводиться список всех новостей. Для этого создадим функцию-обработчик для этого маршрута:
       ^
SyntaxError: invalid syntax


** Process exited - Return Code: 1 **
Press Enter to exit terminal